--- a/index.html
+++ b/index.html
@@ -1,31 +1,21 @@
-<!-- index.html --><!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arabian Premium Touch</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>Arabian Premium Touch</h1>
-    <p>Where Every Bite Tells a Story.</p>
-  </header>  <section class="intro">
-    <h2>Luxury Chocolates & Dry Fruits</h2>
-    <p>
-      Handcrafted chocolates blending Arabian tradition and premium ingredients.
-    </p>
-  </section>  <section class="products" id="products">
-    <h2>Featured Products</h2>
-    <div class="product-card">
-      <img src="images/camel-milk-chocolate.jpg" alt="Camel Milk Treat Chocolate" />
-      <h3>🐪 Camel Milk Treat Chocolate</h3>
-      <p>Price: ₹420</p>
-      <p>Weight: 100g</p>
-      <p>Real camel milk blend, rich and smooth Arabian delight.</p>
-    </div>
-    <!-- Add more product cards as needed -->
-  </section>  <footer>
-    <p>&copy; 2025 Arabian Premium Touch</p>
-  </footer>
+    <p>Where Every Bite Tells a Story</p>
+  </header>
+  <main>
+    <section>
+      <h2>Welcome</h2>
+      <p>Experience the luxury of handmade Arabian chocolates, now available in India.</p>
+    </section>
+  </main>
 </body>
 </html>
